--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "dev": "node esbuild.config.mjs",
     "build": "tsc -skipLibCheck && node esbuild.config.mjs production",
     "pub": "npm run build & npm publish",
-    "test": "node --loader ts-node/esm test/basic.test.ts || npx tsx test/run-test.ts",
+    "test": "ts-node test/basic.test.ts",
     "test:simple": "npx tsx test/run-test.ts"
   },
   "author": "qql2",
   "types": "main.d.ts",
   "devDependencies": {
-    "esbuild": "0.21.5"
+    "@types/mdast": "^4.0.4",
+    "@types/node": "^24.10.1",
+    "esbuild": "0.21.5",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@qql2/remark-obsidian": "^1.0.1",
     "hierarchy-mdast": "^1.0.1",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-to-string": "^4.0.0",
+    "remark": "^15.0.1",
     "remark-cli": "^12.0.1",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
