--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,17 @@
 {
-    "compilerOptions": {
-        "target": "es2016",
-        "lib": [
-            "es6",
-            "dom"
-        ],
-        "module": "commonjs",
-        "declaration": true,
-        "emitDeclarationOnly": true,
-        "outFile": "./main.js",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true
-    },
-    "include": [
-        "src/**/*.ts"
-    ]
+  "compilerOptions": {
+    "target": "es2016",
+    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "types": ["node"],
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "outFile": "./main.js",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
+  },
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
