--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,12 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "lib": ["es6", "dom"],
     "module": "commonjs",
-    "moduleResolution": "node",
-    "types": ["node"],
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "outFile": "./main.js",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "include": ["src/**/*"]
 }
