--- a/package.json
+++ b/package.json
@@ -16,18 +16,14 @@
     "@types/mdast": "^4.0.4",
     "@types/node": "^24.10.1",
     "esbuild": "0.21.5",
-    "typescript": "^5.9.3"
+    "remark-stringify": "^11.0.0",
+    "typescript": "^5.9.3",
+    "unist-util-visit": "^5.0.0"
   },
   "dependencies": {
-    "@qql2/remark-obsidian": "^1.0.2",
+    "@qql2/remark-obsidian": "^1.0.3",
     "hierarchy-mdast": "^1.0.6",
-    "mdast-util-from-markdown": "^2.0.2",
-    "mdast-util-to-string": "^4.0.0",
     "remark": "^15.0.1",
-    "remark-cli": "^12.0.1",
-    "remark-parse": "^11.0.0",
-    "remark-stringify": "^11.0.0",
-    "unified": "^11.0.5",
-    "unist-util-visit": "^5.0.0"
+    "unified": "^11.0.5"
   }
 }
